force-app/main/default/objects/Account/fields/Hardik_Test__c.field-meta.xml
<CustomField>
    <fullName>Hardik_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hardik Test</label>
    <type>Checkbox</type>
</CustomField>