force-app/main/default/objects/Account/fields/NetSuite_id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_id__c</fullName>
    <description>NewSuite Id for Account</description>
    <externalId>true</externalId>
    <label>NetSuite id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>