force-app/main/default/objects/Account/fields/Prachi_Test__c.field-meta.xml
<CustomField>
    <fullName>Prachi_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prachi Test</label>
    <type>Checkbox</type>
</CustomField>