force-app/main/default/objects/Account/fields/Shivam_Test__c.field-meta.xml
<CustomField>
    <fullName>Shivam_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to test the vs code git repository</description>
    <label>Shivam Test</label>
    <type>Checkbox</type>
</CustomField>