force-app/main/default/objects/Account/recordTypes/Prospect.recordType-meta.xml
<RecordType>
    <fullName>Prospect</fullName>
    <active>true</active>
    <description>used for potential customer accounts</description>
    <label>Prospect</label>
</RecordType>